--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
 
   server {
     listen       80;
-    server_name  www.iloveconference.org;
+    server_name  www.scripturecentralqa.org;
     charset      utf-8;
 
     location /_app/immutable/ {
@@ -56,7 +56,7 @@ http {
 
   server {
     listen       80;
-    server_name  iloveconference.org;
+    server_name  scripturecentralqa.org;
 
     location /health {
         proxy_pass http://localhost:3000/health;
@@ -65,7 +65,7 @@ http {
     }
 
     location / {
-        return    301 https://www.iloveconference.org$request_uri;
+        return    301 https://www.scripturecentralqa.org$request_uri;
     }
   }
 
@@ -80,7 +80,7 @@ http {
     }
 
     location / {
-        return       301 https://www.iloveconference.org$request_uri;
+        return       301 https://www.scripturecentralqa.org$request_uri;
     }
   }
 }
